--- a/scss/aboutme.css
+++ b/scss/aboutme.css
@@ -169,19 +169,19 @@
     border: none;
     border-radius: 25px;
     background: linear-gradient(0.25turn, #1DA1A9, #10D2FD);
-    color: white;
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
     margin: 0 auto;
     padding: 10px;
-    width: 180px;
-    margin-top: 100px;
+    width: 260px;
+    margin-top: 70px;
+    font-size: 18px;
   }
   #about-me button a {
-    color: white;
     text-decoration: none;
+    color: #fff;
   }
   #about-me img {
     display: none;
