--- a/scss/portfolio.scss
+++ b/scss/portfolio.scss
@@ -11,13 +11,12 @@
                 align-items: center;
                 margin: 0 auto;
                 padding: 10px;
-                width: 260px;
-                margin-top: 70px;
-                font-size: 18px;
-                
+                width: 190px;
+                margin-top: 50px;
+            
                 a{
-                    text-decoration: none;
-                    color: #fff;
+                color: white;
+                text-decoration: none;
                 }
             }
         }
@@ -97,13 +96,12 @@
                 align-items: center;
                 margin: 0 auto;
                 padding: 10px;
-                width: 260px;
-                margin-top: 70px;
-                font-size: 18px;
-                
+                width: 190px;
+                margin-top: 50px;
+            
                 a{
-                    text-decoration: none;
-                    color: #fff;
+                color: white;
+                text-decoration: none;
                 }
             }
         }
