--- a/scss/footer.css
+++ b/scss/footer.css
@@ -4,13 +4,21 @@
     margin-top: 100px;
   }
   #footer .footer-item {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   #footer .footer-item p {
     color: #000;
     font-family: 'Rokkitt', serif;
     padding: 20px;
+    font-size: 10px;
   }
 }
+/*# sourceMappingURL=footer.css.map */
