--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -11,6 +11,7 @@
             color: #000;
             font-family: 'Rokkitt', serif;
             padding: 20px;
+            font-size: 10px;
         }
     }
 }
