--- a/scss/portfolio.css
+++ b/scss/portfolio.css
@@ -2,11 +2,21 @@
   #portfolio .getproject button {
     border: none;
     border-radius: 25px;
+    background: -webkit-gradient(linear, left top, right top, from(#1DA1A9), to(#10D2FD));
     background: linear-gradient(0.25turn, #1DA1A9, #10D2FD);
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin: 0 auto;
     padding: 10px;
     width: 190px;
@@ -37,9 +47,15 @@
     height: 38px;
   }
   #portfolio .portfolio-item img {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin: 0 auto;
     width: 200px;
     height: 150px;
@@ -58,9 +74,15 @@
     -webkit-text-fill-color: transparent;
   }
   #portfolio .portfolio-text img {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin: 0 auto;
     width: 172px;
     height: auto;
@@ -72,11 +94,21 @@
   #portfolio .getproject button {
     border: none;
     border-radius: 25px;
+    background: -webkit-gradient(linear, left top, right top, from(#1DA1A9), to(#10D2FD));
     background: linear-gradient(0.25turn, #1DA1A9, #10D2FD);
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin: 0 auto;
     padding: 10px;
     width: 190px;
@@ -109,9 +141,15 @@
     height: 44px;
   }
   #portfolio .portfolio-item img {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin: 0 auto;
     width: 300px;
     height: 210px;
@@ -130,9 +168,15 @@
     -webkit-text-fill-color: transparent;
   }
   #portfolio .portfolio-text img {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin: 0 auto;
     width: 172px;
     height: auto;
@@ -144,15 +188,25 @@
   #portfolio .getproject button {
     border: none;
     border-radius: 25px;
+    background: -webkit-gradient(linear, left top, right top, from(#1DA1A9), to(#10D2FD));
     background: linear-gradient(0.25turn, #1DA1A9, #10D2FD);
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin: 0 auto;
     padding: 10px;
     width: 260px;
-    margin-top: 70px;
+    margin-top: 30px;
     font-size: 18px;
   }
   #portfolio .getproject button a {
@@ -182,12 +236,18 @@
     height: 44px;
   }
   #portfolio .portfolio-item img {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin: 0 auto;
-    width: 300px;
-    height: 210px;
+    width: 490px;
+    height: 320px;
     max-width: 100%;
     margin-top: 60px;
   }
@@ -203,9 +263,15 @@
     -webkit-text-fill-color: transparent;
   }
   #portfolio .portfolio-text img {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin: 0 auto;
     width: 172px;
     height: auto;
@@ -217,16 +283,26 @@
   #portfolio .getproject button {
     border: none;
     border-radius: 25px;
+    background: -webkit-gradient(linear, left top, right top, from(#1DA1A9), to(#10D2FD));
     background: linear-gradient(0.25turn, #1DA1A9, #10D2FD);
     color: white;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin: 0 auto;
     padding: 10px;
     width: 200px;
-    margin-top: 50px;
+    margin-top: 20px;
   }
   #portfolio .next_and_back_slide_show button.left-arrow {
     border: none;
@@ -251,12 +327,18 @@
     height: 44px;
   }
   #portfolio .portfolio-item img {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin: 0 auto;
-    width: 350px;
-    height: 240px;
+    width: 490px;
+    height: 320px;
     max-width: 100%;
     margin-top: 60px;
   }
@@ -272,9 +354,15 @@
     -webkit-text-fill-color: transparent;
   }
   #portfolio .portfolio-text img {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin: 0 auto;
     width: 172px;
     height: auto;
@@ -286,15 +374,25 @@
   #portfolio .getproject button {
     border: none;
     border-radius: 25px;
+    background: -webkit-gradient(linear, left top, right top, from(#1DA1A9), to(#10D2FD));
     background: linear-gradient(0.25turn, #1DA1A9, #10D2FD);
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin: 0 auto;
     padding: 10px;
     width: 260px;
-    margin-top: 70px;
+    margin-top: 30px;
     font-size: 18px;
   }
   #portfolio .getproject button a {
@@ -324,12 +422,18 @@
     height: 44px;
   }
   #portfolio .portfolio-item img {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin: 0 auto;
-    width: 350px;
-    height: 240px;
+    width: 490px;
+    height: 320px;
     max-width: 100%;
     margin-top: 60px;
   }
@@ -345,9 +449,15 @@
     -webkit-text-fill-color: transparent;
   }
   #portfolio .portfolio-text img {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin: 0 auto;
     width: 172px;
     height: auto;
@@ -359,15 +469,25 @@
   #portfolio .getproject button {
     border: none;
     border-radius: 25px;
+    background: -webkit-gradient(linear, left top, right top, from(#1DA1A9), to(#10D2FD));
     background: linear-gradient(0.25turn, #1DA1A9, #10D2FD);
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin: 0 auto;
     padding: 10px;
     width: 260px;
-    margin-top: 70px;
+    margin-top: 30px;
     font-size: 18px;
   }
   #portfolio .getproject button a {
@@ -397,12 +517,18 @@
     height: 44px;
   }
   #portfolio .portfolio-item img {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin: 0 auto;
-    width: 350px;
-    height: 240px;
+    width: 490px;
+    height: 320px;
     max-width: 100%;
     margin-top: 60px;
   }
@@ -418,12 +544,19 @@
     -webkit-text-fill-color: transparent;
   }
   #portfolio .portfolio-text img {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin: 0 auto;
     width: 172px;
     height: auto;
     margin-top: -10px;
   }
 }
+/*# sourceMappingURL=portfolio.css.map */
