--- a/scss/bannerTop.scss
+++ b/scss/bannerTop.scss
@@ -541,3 +541,384 @@
         }
     }
 }
+
+@media only screen and (min-width: 1440px) and (max-width: 1599px) {
+    #banner-top-info{
+        .image{
+            overflow-x: hidden;
+            img{
+                display: flex;
+                justify-content: right;
+                align-items: right;
+                width: 900px;
+                height: auto;
+                float: right;
+                margin-right: -120px;
+                margin-top: -35px;
+                transform: rotateX(730deg);
+            }
+        }
+        .author{
+            position:absolute;
+            top: 10%;
+            .element{
+                background-color: rgb(26, 186, 235);
+                position: absolute;
+                width: 187px;
+                height: 37px;
+                margin-top: -57px;
+                margin-left: 160px;
+                z-index: -1;
+                opacity: 0.8;
+            }
+            h1{
+                color: #000000;
+                font-size: 39px;
+                font-family: 'Rokkitt', serif;
+                margin-top: 80px;
+                margin-left: 53px;
+                display: flex;
+                justify-content: left;
+                align-items: left;
+            }
+            h2{
+                color: #000000;
+                font-family: 'Rokkitt', serif;
+                margin-left: 53px;
+                display: flex;
+                justify-content: left;
+                align-items: left;
+                font-size: 28px;
+                margin-top: 40px;
+            }
+            p{
+                margin-left: 53px;
+                color: #000000;
+                font-family: 'Rokkitt', serif;
+                font-size: 20px;
+                float: left;
+                display: flex;
+                justify-content: left;
+                align-items: left;
+            }
+        }
+        .button-area{
+            display: flex;
+            justify-content: left;
+            align-items: left;
+            margin-left: 53px;
+            margin-top: -350px;
+            
+            button{
+                background: linear-gradient(0.25turn, #1D90A9,  #75E6FF);
+                border: none;
+                padding: 12px;
+                margin-top: 10px;
+                
+                &:hover,
+                &:focus {
+                  box-shadow: inset 5em 2em 5em 2em #1D90A9;
+                  transition: .2s .1s ease-in-out;
+                   }
+                
+                a{
+                    color: #fff;
+                    font-family: 'Rokkitt', serif;
+                    font-size: 17px;
+                    text-decoration: none;
+                }
+            }
+        }
+        .image_abstract_item{
+            img{
+               display: none;
+            }
+        }
+    }
+}
+
+@media only screen and (min-width: 1600px) and (max-width: 1679px) {
+    #banner-top-info{
+        .image{
+            overflow-x: hidden;
+            img{
+                display: flex;
+                justify-content: right;
+                align-items: right;
+                width: 900px;
+                height: auto;
+                float: right;
+                margin-right: -120px;
+                margin-top: -35px;
+                transform: rotateX(730deg);
+            }
+        }
+        .author{
+            position:absolute;
+            top: 10%;
+            .element{
+                background-color: rgb(26, 186, 235);
+                position: absolute;
+                width: 187px;
+                height: 37px;
+                margin-top: -57px;
+                margin-left: 160px;
+                z-index: -1;
+                opacity: 0.8;
+            }
+            h1{
+                color: #000000;
+                font-size: 39px;
+                font-family: 'Rokkitt', serif;
+                margin-top: 80px;
+                margin-left: 53px;
+                display: flex;
+                justify-content: left;
+                align-items: left;
+            }
+            h2{
+                color: #000000;
+                font-family: 'Rokkitt', serif;
+                margin-left: 53px;
+                display: flex;
+                justify-content: left;
+                align-items: left;
+                font-size: 28px;
+                margin-top: 40px;
+            }
+            p{
+                margin-left: 53px;
+                color: #000000;
+                font-family: 'Rokkitt', serif;
+                font-size: 20px;
+                float: left;
+                display: flex;
+                justify-content: left;
+                align-items: left;
+            }
+        }
+        .button-area{
+            display: flex;
+            justify-content: left;
+            align-items: left;
+            margin-left: 53px;
+            margin-top: -350px;
+            
+            button{
+                background: linear-gradient(0.25turn, #1D90A9,  #75E6FF);
+                border: none;
+                padding: 12px;
+                margin-top: 10px;
+                
+                &:hover,
+                &:focus {
+                  box-shadow: inset 5em 2em 5em 2em #1D90A9;
+                  transition: .2s .1s ease-in-out;
+                   }
+                
+                a{
+                    color: #fff;
+                    font-family: 'Rokkitt', serif;
+                    font-size: 17px;
+                    text-decoration: none;
+                }
+            }
+        }
+        .image_abstract_item{
+            img{
+               display: none;
+            }
+        }
+    }
+}
+ 
+@media only screen and (min-width: 1680px) and (max-width: 1919px) {
+    #banner-top-info{
+        .image{
+            overflow-x: hidden;
+            img{
+                display: flex;
+                justify-content: right;
+                align-items: right;
+                width: 900px;
+                height: auto;
+                float: right;
+                margin-right: -120px;
+                margin-top: -35px;
+                transform: rotateX(730deg);
+            }
+        }
+        .author{
+            position:absolute;
+            top: 10%;
+            .element{
+                background-color: rgb(26, 186, 235);
+                position: absolute;
+                width: 187px;
+                height: 37px;
+                margin-top: -57px;
+                margin-left: 160px;
+                z-index: -1;
+                opacity: 0.8;
+            }
+            h1{
+                color: #000000;
+                font-size: 39px;
+                font-family: 'Rokkitt', serif;
+                margin-top: 80px;
+                margin-left: 53px;
+                display: flex;
+                justify-content: left;
+                align-items: left;
+            }
+            h2{
+                color: #000000;
+                font-family: 'Rokkitt', serif;
+                margin-left: 53px;
+                display: flex;
+                justify-content: left;
+                align-items: left;
+                font-size: 28px;
+                margin-top: 40px;
+            }
+            p{
+                margin-left: 53px;
+                color: #000000;
+                font-family: 'Rokkitt', serif;
+                font-size: 26px;
+                float: left;
+                display: flex;
+                justify-content: left;
+                align-items: left;
+            }
+        }
+        .button-area{
+            display: flex;
+            justify-content: left;
+            align-items: left;
+            margin-left: 53px;
+            margin-top: -350px;
+            
+            button{
+                background: linear-gradient(0.25turn, #1D90A9,  #75E6FF);
+                border: none;
+                padding: 12px;
+                margin-top: 10px;
+                
+                &:hover,
+                &:focus {
+                  box-shadow: inset 5em 2em 5em 2em #1D90A9;
+                  transition: .2s .1s ease-in-out;
+                   }
+                
+                a{
+                    color: #fff;
+                    font-family: 'Rokkitt', serif;
+                    font-size: 17px;
+                    text-decoration: none;
+                }
+            }
+        }
+        .image_abstract_item{
+            img{
+               display: none;
+            }
+        }
+    }
+}
+
+@media only screen and (min-width: 1920px) and (max-width: 2559px) {
+    #banner-top-info{
+        .image{
+            overflow-x: hidden;
+            img{
+                display: flex;
+                justify-content: right;
+                align-items: right;
+                width: 900px;
+                height: auto;
+                float: right;
+                margin-right: -120px;
+                margin-top: -35px;
+                transform: rotateX(730deg);
+            }
+        }
+        .author{
+            position:absolute;
+            top: 10%;
+            .element{
+                background-color: rgb(26, 186, 235);
+                position: absolute;
+                width: 187px;
+                height: 37px;
+                margin-top: -57px;
+                margin-left: 160px;
+                z-index: -1;
+                opacity: 0.8;
+            }
+            h1{
+                color: #000000;
+                font-size: 39px;
+                font-family: 'Rokkitt', serif;
+                margin-top: 80px;
+                margin-left: 53px;
+                display: flex;
+                justify-content: left;
+                align-items: left;
+            }
+            h2{
+                color: #000000;
+                font-family: 'Rokkitt', serif;
+                margin-left: 53px;
+                display: flex;
+                justify-content: left;
+                align-items: left;
+                font-size: 28px;
+                margin-top: 40px;
+            }
+            p{
+                margin-left: 53px;
+                color: #000000;
+                font-family: 'Rokkitt', serif;
+                font-size: 26px;
+                float: left;
+                display: flex;
+                justify-content: left;
+                align-items: left;
+            }
+        }
+        .button-area{
+            display: flex;
+            justify-content: left;
+            align-items: left;
+            margin-left: 53px;
+            margin-top: -350px;
+            
+            button{
+                background: linear-gradient(0.25turn, #1D90A9,  #75E6FF);
+                border: none;
+                padding: 12px;
+                margin-top: 10px;
+                
+                &:hover,
+                &:focus {
+                  box-shadow: inset 5em 2em 5em 2em #1D90A9;
+                  transition: .2s .1s ease-in-out;
+                   }
+                
+                a{
+                    color: #fff;
+                    font-family: 'Rokkitt', serif;
+                    font-size: 17px;
+                    text-decoration: none;
+                }
+            }
+        }
+        .image_abstract_item{
+            img{
+               display: none;
+            }
+        }
+    }
+}
+ 
