Add clickable links on images in portfolio

--- a/scss/portfolio.scss
+++ b/scss/portfolio.scss
@@ -25,35 +25,37 @@
                 border: none;
                 background: transparent;
                 float: left;
-                margin-top: 100px;
+                margin-top: 180px;
                 img{
-                    width: 38px;
-                    height: 38px;
+                    width: 35px;
+                    height: 35px;
                 }
             }
             button.right-arrow{
                 border: none;
                 background: transparent;
                 float: right;
-                margin-top: 100px;
+                margin-top: 180px;
                 
                 img{
-                    width: 38px;
-                    height: 38px;
+                    width: 35px;
+                    height: 35px;
                 }
             }
         }
         .portfolio-item{
             
-            img{
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                margin: 0 auto;
-                width: 200px;
-                height: 150px;
-                max-width: 100%;
-                margin-top: 60px;
+            a{
+                img{
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    margin: 0 auto;
+                    width: 220px;
+                    height: 160px;
+                    max-width: 100%;
+                    margin-top: 120px;
+                }
             }
         }
         .portfolio-text{
@@ -110,7 +112,7 @@
                 border: none;
                 background: transparent;
                 float: left;
-                margin-top: 150px;
+                margin-top: 200px;
                 margin-left: 5%;
                 
                 img{
@@ -122,7 +124,7 @@
                 border: none;
                 background: transparent;
                 float: right;
-                margin-top: 150px;
+                margin-top: 200px;
                 margin-right: 5%;
                 
                 img{
@@ -133,15 +135,17 @@
         }
         .portfolio-item{
             
-            img{
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                margin: 0 auto;
-                width: 300px;
-                height: 210px;
-                max-width: 100%;
-                margin-top: 60px;
+            a{
+                img{
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    margin: 0 auto;
+                    width: 320px;
+                    height: 210px;
+                    max-width: 100%;
+                    margin-top: 120px;
+                }
             }
         }
         .portfolio-text{
@@ -222,15 +226,17 @@
         }
         .portfolio-item{
             
-            img{
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                margin: 0 auto;
-                width: 300px;
-                height: 210px;
-                max-width: 100%;
-                margin-top: 110px;
+            a{
+                img{
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    margin: 0 auto;
+                    width: 320px;
+                    height: 210px;
+                    max-width: 100%;
+                    margin-top: 120px;
+                }
             }
         }
         .portfolio-text{
@@ -307,15 +313,17 @@
         }
         .portfolio-item{
             
-            img{
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                margin: 0 auto;
-                width: 300px;
-                height: 210px;
-                max-width: 100%;
-                margin-top: 1200px;
+            a{
+                img{
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    margin: 0 auto;
+                    width: 320px;
+                    height: 210px;
+                    max-width: 100%;
+                    margin-top: 120px;
+                }
             }
         }
         .portfolio-text{
@@ -396,15 +404,17 @@
         }
         .portfolio-item{
             
-            img{
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                margin: 0 auto;
-                width: 320px;
-                height: 210px;
-                max-width: 100%;
-                margin-top: 120px;
+            a{
+                img{
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    margin: 0 auto;
+                    width: 320px;
+                    height: 210px;
+                    max-width: 100%;
+                    margin-top: 120px;
+                }
             }
         }
         .portfolio-text{
@@ -485,15 +495,17 @@
         }
         .portfolio-item{
             
-            img{
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                margin: 0 auto;
-                width: 320px;
-                height: 210px;
-                max-width: 100%;
-                margin-top: 120px;
+            a{
+                img{
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    margin: 0 auto;
+                    width: 320px;
+                    height: 210px;
+                    max-width: 100%;
+                    margin-top: 120px;
+                }
             }
         }
         .portfolio-text{
