--- a/scss/portfolio.css
+++ b/scss/portfolio.css
@@ -20,31 +20,31 @@
     border: none;
     background: transparent;
     float: left;
-    margin-top: 100px;
+    margin-top: 180px;
   }
   #portfolio .next_and_back_slide_show button.left-arrow img {
-    width: 38px;
-    height: 38px;
+    width: 35px;
+    height: 35px;
   }
   #portfolio .next_and_back_slide_show button.right-arrow {
     border: none;
     background: transparent;
     float: right;
-    margin-top: 100px;
+    margin-top: 180px;
   }
   #portfolio .next_and_back_slide_show button.right-arrow img {
-    width: 38px;
-    height: 38px;
+    width: 35px;
+    height: 35px;
   }
-  #portfolio .portfolio-item img {
+  #portfolio .portfolio-item a img {
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 0 auto;
-    width: 200px;
-    height: 150px;
+    width: 220px;
+    height: 160px;
     max-width: 100%;
-    margin-top: 60px;
+    margin-top: 120px;
   }
   #portfolio .portfolio-text h2 {
     text-align: center;
@@ -90,7 +90,7 @@
     border: none;
     background: transparent;
     float: left;
-    margin-top: 150px;
+    margin-top: 200px;
     margin-left: 5%;
   }
   #portfolio .next_and_back_slide_show button.left-arrow img {
@@ -101,22 +101,22 @@
     border: none;
     background: transparent;
     float: right;
-    margin-top: 150px;
+    margin-top: 200px;
     margin-right: 5%;
   }
   #portfolio .next_and_back_slide_show button.right-arrow img {
     width: 44px;
     height: 44px;
   }
-  #portfolio .portfolio-item img {
+  #portfolio .portfolio-item a img {
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 0 auto;
-    width: 300px;
+    width: 320px;
     height: 210px;
     max-width: 100%;
-    margin-top: 60px;
+    margin-top: 120px;
   }
   #portfolio .portfolio-text h2 {
     text-align: center;
@@ -181,15 +181,15 @@
     width: 44px;
     height: 44px;
   }
-  #portfolio .portfolio-item img {
+  #portfolio .portfolio-item a img {
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 0 auto;
-    width: 300px;
+    width: 320px;
     height: 210px;
     max-width: 100%;
-    margin-top: 110px;
+    margin-top: 120px;
   }
   #portfolio .portfolio-text h2 {
     text-align: center;
@@ -250,15 +250,15 @@
     width: 44px;
     height: 44px;
   }
-  #portfolio .portfolio-item img {
+  #portfolio .portfolio-item a img {
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 0 auto;
-    width: 300px;
+    width: 320px;
     height: 210px;
     max-width: 100%;
-    margin-top: 1200px;
+    margin-top: 120px;
   }
   #portfolio .portfolio-text h2 {
     text-align: center;
@@ -323,7 +323,7 @@
     width: 44px;
     height: 44px;
   }
-  #portfolio .portfolio-item img {
+  #portfolio .portfolio-item a img {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -396,7 +396,7 @@
     width: 44px;
     height: 44px;
   }
-  #portfolio .portfolio-item img {
+  #portfolio .portfolio-item a img {
     display: flex;
     justify-content: center;
     align-items: center;
